--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@ layout: default
             {% include related.html %}
         </div><!-- /container -->
         {% include inline-scripts.html %}
+        {% include analytics.html %}
     </body>
 </html>
